# Data-Structures-Collection

./: .gitignore  CMakeLists.txt  README.md  a.out  bckp  btree.h  main.cpp
include/: Debuggers.hpp  arrayBasedTreeHelpers.h  bTreeHelpers.h  linkedListHelpers.h  simpleStructures.h  structureTesters.h
include/DictionaryTrees/: AVLTree.h  BSTTree.h  PatriciaTree.h  RSTTree.h  Splay.h  TRIETree.h  _AVLcore.h  _SplayCore.h  binaryTRIALStructures.h  dTreeMain.h  depth1MapT.h
include/HashMaps/: HashFunctions.h  HashingMain.h  chainHashingMap.h  plainHashMap.h
include/Heaps/: ArrayBasedStructure.h  Beap.h  Heap.h  HeapHelpers.h  HeapsMain.h  PriorityQueue.h  _baseBeapT.h  _baseBinomialQueueT.h  _baseHeapT.h  _baseLeftistHeapT.h  heapTesters.h
include/Sorting/: indexedSorting.h  listSorting.h  sortingMains.h
include/btree/: btree.h  btreeMain.h
include/hanoi/: hanoi.h  hanoiMain.h  stack.h  timer.h
src/: Debuggers.cpp  HashingMain.cpp  dTreeMain.cpp
